--- a/ComicsShop/ComicsShop.csproj
+++ b/ComicsShop/ComicsShop.csproj
@@ -7,9 +7,29 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="EFCore.AutomaticMigrations.NetTopologySuite" Version="6.0.0" />
+      <PackageReference Include="EFCore.DbContextFactory" Version="2.0.0" />
+      <PackageReference Include="EntityFramework" Version="6.5.0-preview2-24180-01" />
+      <PackageReference Include="JSON" Version="1.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.30" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
       <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.30" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.30">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.30" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.30">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="wwwroot\img" />
+      <Folder Include="wwwroot\js" />
     </ItemGroup>
 
 </Project>
